Redesigned with proper content and seo

--- a/index.html
+++ b/index.html
@@ -4,8 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hexy - Elevate Your Digital Presence</title>
-<!--     Upade -->
+    <meta name="description"
+        content="Hexy is a creative agency specializing in content writing, technical writing, email marketing, and newsletter management. We deliver sexy, engaging, and results-driven solutions.">
+    <meta name="keywords"
+        content="content writing, technical writing, email marketing, newsletter management, copywriting, ghostwriting, digital marketing, creative agency, brand messaging, SEO writing">
+    <meta name="author" content="Hexy">
+    <meta property="og:title"
+        content="Hexy - The most sexiest agency in the world for  Ghostwriting, Content Writing & Email Marketing">
+    <meta property="og:description"
+        content="Elevate your brand with Hexy’s expert writing and email marketing services. Book a call today and create something extraordinary.">
+    <meta property="og:image" content="https://hexyme.sirv.com/hexy/Untitled%20design%20(2).png">
+    <!-- Add the image URL for social sharing -->
+    <meta property="og:url" content="https://hexy.me">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Hexy - The Sexiest Agency for Content & Email Marketing">
+    <meta name="twitter:description"
+        content="Elevate your brand with Hexy’s expert ghostwriting writing and email marketing services. Book a call today and create something sexy.">
+    <meta name="twitter:image" content="https://hexyme.sirv.com/hexy/Untitled%20design%20(2).png">
+    <!-- Add the image URL for Twitter -->
+
+    <title>Hexy - world's sexiest content agency | Content Writing, Ghostwriting & Email Marketing</title>
+
+
+    <link rel="shortcut icon" href="https://hexyme.sirv.com/hexy/favicon.ico" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -42,15 +63,16 @@
                 <div class="flex flex-col items-center space-y-4 text-center">
                     <div class="space-y-2">
                         <h1 class="text-4xl font-bold tracking-tighter sm:text-5xl md:text-6xl lg:text-7xl/none">
-                            Elevate Your Digital Presence
+                            Professional Writing, Delivered with Flair
                         </h1>
                         <p class="mx-auto max-w-[700px] text-gray-400 md:text-xl">
-                            Crafting compelling content and driving engagement through expert strategies.
+                            We craft words that captivate, engage, and convert. If it’s not sexy, then it’s not made by
+                            Hexy.
                         </p>
                     </div>
-                    <a href="https://tidycal.com/kumar1/30-minute-meeting"
+                    <a href="https://calendly.com/connecthexy/consult-hexy"
                         class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none ring-offset-background bg-white text-black hover:bg-gray-200 h-10 py-2 px-4">
-                        Book a Meeting
+                        Book a Call Now
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                             class="ml-2 h-4 w-4">
@@ -60,16 +82,20 @@
                 </div>
             </div>
         </section>
+        <!-- about -->
         <section id="about" class="w-full py-12 md:py-24 lg:py-32">
             <div class="container px-4 md:px-6 mx-auto">
                 <div class="flex flex-col items-center justify-center space-y-4 text-center">
                     <div class="space-y-2">
-                        <h2 class="text-3xl font-bold tracking-tighter sm:text-4xl md:text-5xl">About Hexy</h2>
+                        <h2 class="text-3xl font-bold tracking-tighter sm:text-4xl md:text-5xl">What makes us so
+                            <strong>sexy</strong>?
+                        </h2>
                         <p
                             class="mx-auto max-w-[700px] text-gray-500 md:text-xl/relaxed lg:text-base/relaxed xl:text-xl/relaxed">
-                            We are experts in crafting high-quality content, managing newsletters, and driving effective
-                            email marketing
-                            campaigns. Our mission is to help businesses thrive in the digital landscape.
+                            Hexy is a creative agency focused on delivering exceptional writing and marketing services.
+                            From compelling content to strategic email campaigns, our goal is to elevate your brand with
+                            style and impact. Whether it's persuasive copy or technical clarity, we make sure your words
+                            leave a lasting impression—because if it’s not sexy, then it’s not made by Hexy.
                         </p>
                     </div>
                 </div>
@@ -79,7 +105,26 @@
             <div class="container px-4 md:px-6 mx-auto">
                 <h2 class="text-3xl font-bold tracking-tighter sm:text-4xl md:text-5xl mb-8 text-center">Our Services
                 </h2>
-                <div class="grid gap-6 lg:grid-cols-2">
+                <div class="grid gap-6 lg:grid-cols-3">
+                    <!-- copy -->
+                    <div class="rounded-lg border bg-card text-card-foreground shadow-sm">
+                        <div class="p-6">
+                            <h3 class="text-2xl font-semibold leading-none tracking-tight flex items-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" class="w-6 h-6 mr-2">
+                                    <path
+                                        d="m3 15 5.12-5.12A3 3 0 0 1 10.24 9H13a2 2 0 1 1 0 4h-2.5m4-.68 4.17-4.89a1.88 1.88 0 0 1 2.92 2.36l-4.2 5.94A3 3 0 0 1 14.96 17H9.83a2 2 0 0 0-1.42.59L7 19">
+                                    </path>
+                                </svg>
+                                Copywriting
+                            </h3>
+                            <p class="text-sm text-muted-foreground pt-2">
+                                Persuasive words that engage, sell, and boost your brand's message.
+                            </p>
+                        </div>
+                    </div>
+                    <!-- Content -->
                     <div class="rounded-lg border bg-card text-card-foreground shadow-sm">
                         <div class="p-6">
                             <h3 class="text-2xl font-semibold leading-none tracking-tight flex items-center">
@@ -96,11 +141,29 @@
                                 Content Writing
                             </h3>
                             <p class="text-sm text-muted-foreground pt-2">
-                                Engaging, SEO-friendly content creation that resonates with your audience and drives
-                                results.
+                                High-quality, SEO-friendly content that captivates and informs.
                             </p>
                         </div>
                     </div>
+                    <!-- Ghost -->
+
+                    <div class="rounded-lg border bg-card text-card-foreground shadow-sm">
+                        <div class="p-6">
+                            <h3 class="text-2xl font-semibold leading-none tracking-tight flex items-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" class="w-6 h-6 mr-2">
+                                    <path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"></path>
+                                    <circle cx="12" cy="7" r="4"></circle>
+                                </svg>
+                                Ghostwriting
+                            </h3>
+                            <p class="text-sm text-muted-foreground pt-2">
+                                Professional writing that reflects your voice and expertise.
+                            </p>
+                        </div>
+                    </div>
+                    <!-- Technical -->
                     <div class="rounded-lg border bg-card text-card-foreground shadow-sm">
                         <div class="p-6">
                             <h3 class="text-2xl font-semibold leading-none tracking-tight flex items-center">
@@ -117,11 +180,29 @@
                                 Technical Writing
                             </h3>
                             <p class="text-sm text-muted-foreground pt-2">
-                                Clear and concise technical documentation that simplifies complex concepts for your
-                                users.
+                                Clear, concise documentation for complex products and services.
                             </p>
                         </div>
                     </div>
+
+                    <!-- Email -->
+                    <div class="rounded-lg border bg-card text-card-foreground shadow-sm">
+                        <div class="p-6">
+                            <h3 class="text-2xl font-semibold leading-none tracking-tight flex items-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" class="w-6 h-6 mr-2">
+                                    <rect width="20" height="16" x="2" y="4" rx="2"></rect>
+                                    <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
+                                </svg>
+                                Email Marketing
+                            </h3>
+                            <p class="text-sm text-muted-foreground pt-2">
+                                Targeted email campaigns to drive engagement and conversions.
+                            </p>
+                        </div>
+                    </div>
+                    <!-- Newsletter -->
                     <div class="rounded-lg border bg-card text-card-foreground shadow-sm">
                         <div class="p-6">
                             <h3 class="text-2xl font-semibold leading-none tracking-tight flex items-center">
@@ -138,28 +219,13 @@
                                 Newsletter Management
                             </h3>
                             <p class="text-sm text-muted-foreground pt-2">
-                                Strategies for subscriber growth and engagement, keeping your audience informed and
-                                connected.
+                                End-to-end service for engaging, well-crafted newsletters.
                             </p>
                         </div>
                     </div>
-                    <div class="rounded-lg border bg-card text-card-foreground shadow-sm">
-                        <div class="p-6">
-                            <h3 class="text-2xl font-semibold leading-none tracking-tight flex items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                    stroke-linejoin="round" class="w-6 h-6 mr-2">
-                                    <rect width="20" height="16" x="2" y="4" rx="2"></rect>
-                                    <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
-                                </svg>
-                                Email Marketing
-                            </h3>
-                            <p class="text-sm text-muted-foreground pt-2">
-                                Targeted email campaigns that boost client engagement and drive conversions for your
-                                business.
-                            </p>
-                        </div>
-                    </div>
+
+
+
                 </div>
             </div>
         </section>
@@ -167,19 +233,23 @@
             <div class="container px-4 md:px-6 mx-auto">
                 <div class="flex flex-col items-center justify-center space-y-4 text-center">
                     <div class="space-y-2 pb-6 md:pb-12 lg:pb-24">
-                        <h2 class="text-3xl font-bold tracking-tighter sm:text-4xl md:text-5xl">Reach out to Hexy</h2>
+                        <h2 class="text-3xl font-bold tracking-tighter sm:text-4xl md:text-5xl">Reach out to the most
+                            <strong>sexiest</strong> agency in the world.
+                        </h2>
                         <p
                             class="mx-auto max-w-[700px] text-gray-500 md:text-xl/relaxed lg:text-base/relaxed xl:text-xl/relaxed">
-                            Ready to take your content and email marketing strategy to the next level? Let’s connect!
-                            Book a virtual meeting with us to discuss how Hexy can help you create compelling content,
-                            streamline newsletter management, and boost email engagement. Click the button below to
-                            schedule a call at your convenience.
+                            Ready to take your brand’s communication to the next level? Let’s connect and create
+                            something extraordinary together. Book a virtual meeting with Hexy, where we tailor our
+                            expertise to fit your needs. Because if it’s not sexy, then it’s not made by Hexy.
                         </p>
                     </div>
                 </div>
             </div>
-            <div class="tidycal-embed" data-path="kumar1/30-minute-meeting"></div>
-            <script src="https://asset-tidycal.b-cdn.net/js/embed.js" async></script>
+            <!-- Calendly inline widget begin -->
+            <div class="calendly-inline-widget" data-url="https://calendly.com/connecthexy/consult-hexy"
+                style="min-width:320px;height:700px;"></div>
+            <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+            <!-- Calendly inline widget end -->
         </section>
     </main>
     <footer id="contact"
@@ -187,8 +257,8 @@
         <p class="text-xs text-gray-500">© 2024 Hexy. All rights reserved.</p>
         <nav class="sm:ml-auto flex gap-4 sm:gap-6">
             <a class="text-xs hover:underline underline-offset-4" href="mailto:kumar@hexy.me">kumar@hexy.me</a>
-            <a class="text-xs hover:underline underline-offset-4" href="#">LinkedIn</a>
-            <a class="text-xs hover:underline underline-offset-4" href="#">Twitter</a>
+            <a class="text-xs hover:underline underline-offset-4" href="https://www.linkedin.com/company/tryhexyme">LinkedIn</a>
+            <a class="text-xs hover:underline underline-offset-4" href="https://x.com/tryhexyme">X</a>
         </nav>
     </footer>
 </body>
