--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <meta property="og:description"
         content="Elevate your brand with Hexy’s expert writing and email marketing services. Book a call today and create something extraordinary.">
     <meta property="og:image" content="https://hexyme.sirv.com/hexy/Untitled%20design%20(2).png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
     <!-- Add the image URL for social sharing -->
     <meta property="og:url" content="https://hexy.me">
     <meta name="twitter:card" content="summary_large_image">
@@ -45,7 +50,13 @@
     </script>
 </head>
 
+<style>
+    body {
+        font-family: 'Inter', sans-serif;
+    }
+</style>
 <body class="flex flex-col min-h-screen bg-white text-black">
+   
     <header class="px-4 lg:px-6 h-16 flex items-center">
         <a href="#" class="flex items-center justify-center">
             <span class="sr-only">Hexy</span>
@@ -124,45 +135,6 @@
                             </p>
                         </div>
                     </div>
-                    <!-- Content -->
-                    <div class="rounded-lg border bg-card text-card-foreground shadow-sm">
-                        <div class="p-6">
-                            <h3 class="text-2xl font-semibold leading-none tracking-tight flex items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                    stroke-linejoin="round" class="w-6 h-6 mr-2">
-                                    <path d="M14.5 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.5L14.5 2z">
-                                    </path>
-                                    <polyline points="14 2 14 8 20 8"></polyline>
-                                    <line x1="16" y1="13" x2="8" y2="13"></line>
-                                    <line x1="16" y1="17" x2="8" y2="17"></line>
-                                    <line x1="10" y1="9" x2="8" y2="9"></line>
-                                </svg>
-                                Content Writing
-                            </h3>
-                            <p class="text-sm text-muted-foreground pt-2">
-                                High-quality, SEO-friendly content that captivates and informs.
-                            </p>
-                        </div>
-                    </div>
-                    <!-- Ghost -->
-
-                    <div class="rounded-lg border bg-card text-card-foreground shadow-sm">
-                        <div class="p-6">
-                            <h3 class="text-2xl font-semibold leading-none tracking-tight flex items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                    stroke-linejoin="round" class="w-6 h-6 mr-2">
-                                    <path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"></path>
-                                    <circle cx="12" cy="7" r="4"></circle>
-                                </svg>
-                                Ghostwriting
-                            </h3>
-                            <p class="text-sm text-muted-foreground pt-2">
-                                Professional writing that reflects your voice and expertise.
-                            </p>
-                        </div>
-                    </div>
                     <!-- Technical -->
                     <div class="rounded-lg border bg-card text-card-foreground shadow-sm">
                         <div class="p-6">
@@ -185,41 +157,85 @@
                         </div>
                     </div>
 
-                    <!-- Email -->
+                    <!-- Ghost -->
+
                     <div class="rounded-lg border bg-card text-card-foreground shadow-sm">
                         <div class="p-6">
                             <h3 class="text-2xl font-semibold leading-none tracking-tight flex items-center">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                     stroke-linejoin="round" class="w-6 h-6 mr-2">
-                                    <rect width="20" height="16" x="2" y="4" rx="2"></rect>
-                                    <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
+                                    <path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"></path>
+                                    <circle cx="12" cy="7" r="4"></circle>
                                 </svg>
-                                Email Marketing
+                                Ghostwriting
                             </h3>
                             <p class="text-sm text-muted-foreground pt-2">
-                                Targeted email campaigns to drive engagement and conversions.
+                                Professional writing that reflects your voice and expertise.
                             </p>
                         </div>
                     </div>
-                    <!-- Newsletter -->
+
+                    <!-- Content -->
                     <div class="rounded-lg border bg-card text-card-foreground shadow-sm">
                         <div class="p-6">
                             <h3 class="text-2xl font-semibold leading-none tracking-tight flex items-center">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                     stroke-linejoin="round" class="w-6 h-6 mr-2">
-                                    <path
-                                        d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-2 2Zm0 0a2 2 0 0 1-2-2v-9c0-1.1.9-2 2-2h2">
+                                    <path d="M14.5 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.5L14.5 2z">
                                     </path>
-                                    <path d="M18 14h-8"></path>
-                                    <path d="M15 18h-5"></path>
-                                    <path d="M10 6h8v4h-8V6Z"></path>
+                                    <polyline points="14 2 14 8 20 8"></polyline>
+                                    <line x1="16" y1="13" x2="8" y2="13"></line>
+                                    <line x1="16" y1="17" x2="8" y2="17"></line>
+                                    <line x1="10" y1="9" x2="8" y2="9"></line>
                                 </svg>
-                                Newsletter Management
+                                Custom Hooks Creation
                             </h3>
                             <p class="text-sm text-muted-foreground pt-2">
-                                End-to-end service for engaging, well-crafted newsletters.
+                                Custom hooks design to attract more customers.
+                            </p>
+                        </div>
+                    </div>
+                    <!-- Onboarding -->
+                    <div class="rounded-lg border bg-card text-card-foreground shadow-sm">
+                        <div class="p-6">
+                            <h3 class="text-2xl font-semibold leading-none tracking-tight flex items-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" class="w-6 h-6 mr-2">
+                                    <polygon points="23 7 16 12 23 17 23 7"></polygon>
+                                    <rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect>
+                                </svg>
+                                Onboarding & Product Videos
+                            </h3>
+                            <p class="text-sm text-muted-foreground pt-2">
+                                Customer Onboarding and Product Videos for launch weeks.
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- UGC -->
+                    <div class="rounded-lg border bg-card text-card-foreground shadow-sm">
+                        <div class="p-6">
+                            <h3 class="text-2xl font-semibold leading-none tracking-tight flex items-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" class="w-6 h-6 mr-2">
+
+                                    <path d="M17 21v-2a4 4 0 0 0-4-4H7a4 4 0 0 0-4 4v2"></path>
+
+                                    <circle cx="9" cy="7" r="4"></circle>
+
+                                    <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
+
+                                    <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+
+                                </svg>
+                                UGC Influencer Management
+                            </h3>
+                            <p class="text-sm text-muted-foreground pt-2">
+                                Tailored ads designed to convert and grow your business.
                             </p>
                         </div>
                     </div>
@@ -257,7 +273,8 @@
         <p class="text-xs text-gray-500">© 2024 Hexy. All rights reserved.</p>
         <nav class="sm:ml-auto flex gap-4 sm:gap-6">
             <a class="text-xs hover:underline underline-offset-4" href="mailto:kumar@hexy.me">kumar@hexy.me</a>
-            <a class="text-xs hover:underline underline-offset-4" href="https://www.linkedin.com/company/tryhexyme">LinkedIn</a>
+            <a class="text-xs hover:underline underline-offset-4"
+                href="https://www.linkedin.com/company/tryhexyme">LinkedIn</a>
             <a class="text-xs hover:underline underline-offset-4" href="https://x.com/tryhexyme">X</a>
         </nav>
     </footer>
